--- a/src/templates/cards.hbs
+++ b/src/templates/cards.hbs
@@ -3,7 +3,7 @@
   </p>
   <h1>It`s WORKS!!!!! )))))</h1>
 
-  <a href='https://www.gifki.org/cat-tanci-107.htm'><img
+  <a href='../index.html'><img
       src='https://www.gifki.org/data/media/107/tanets-animatsionnaya-kartinka-0472.gif'
       border='0'
       alt='tanets-animatsionnaya-kartinka-0472'
