--- a/src/sass/_cards.scss
+++ b/src/sass/_cards.scss
@@ -111,6 +111,7 @@ input {
   text-align: center;
   font-size: 18;
   font-weight: 400;
+  color: #212121;
   background-color: rgb(238, 255, 225);
   border-radius: 4px;
   border: 0.5px solid rgba(0, 0, 0, 0.349);
