--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -11,6 +11,7 @@ body {
   background-size: 2160px, cover;
   // background-size: cover;
   background-attachment: inherit;
+  color: #212121;
 
   // background-repeat: no-repeat;
 }
