--- a/src/sass/_cards.scss
+++ b/src/sass/_cards.scss
@@ -52,9 +52,11 @@
   left: 0;
   bottom: 0;
   display: flex;
+  // align-content: center;
   justify-content: center;
-  width: 400px;
-  padding: 10px 0px;
+  // gap: 2px;
+  width: 100%;
+  padding: 10px;
   font-size: 14px;
   border-bottom: 1px solid #212121;
   border-bottom-right-radius: 8px;
