--- a/src/sass/_cards.scss
+++ b/src/sass/_cards.scss
@@ -40,6 +40,7 @@ input {
   border-radius: 4px;
   border: 0.5px solid rgba(0, 0, 0, 0.349);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  cursor: pointer;
   &:hover,
   &:focus {
     position: relative;
