--- a/src/templates/dancingGif.hbs
+++ b/src/templates/dancingGif.hbs
@@ -3,9 +3,11 @@
   </p>
   <h1>It`s WORKS!!!!! )))))</h1> }}
 
-  <a href='#' class="dancing-gif" title='HIDE ME))'><img
-      src='https://www.gifki.org/data/media/107/tanets-animatsionnaya-kartinka-0472.gif'
+  <a href='#' class="dancing-gif" title='HIDE ME))'>
+    <img id="danceGirl"
+      {{!-- src='https://www.gifki.org/data/media/107/tanets-animatsionnaya-kartinka-0472.gif' --}}
       border='0'
       alt='tanets-animatsionnaya-kartinka-0472'
-    /></a>
+    />
+    </a>
 </div>
